--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,10 @@
       <artifactId>spring-core</artifactId>
       <version>5.2.2.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+    </dependency>  
     
   </dependencies>
   <build>
