--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,15 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
+
       <artifactId>spring-context</artifactId>
     </dependency>  
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>5.2.2.RELEASE</version>
+    </dependency>
+
     
   </dependencies>
   <build>
