--- a/pom.xml
+++ b/pom.xml
@@ -14,23 +14,17 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
-      <version>5.2.2.RELEASE</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-
-      <artifactId>spring-context</artifactId>
-    </dependency>  
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-web</artifactId>
+    <version>5.2.2.RELEASE</version>
+</dependency> 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
       <version>5.2.2.RELEASE</version>
-    </dependency>
-
-    
+    </dependency>    
   </dependencies>
   <build>
     <finalName>01-Maven-web-App</finalName>
